libs/extractor/src/snapshots/extractor__tests__styled_tag_that_is_neither_member_nor_call.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import { styled } from '@devup-ui/react';\nconst S = styled['div']`color: red;`;\"))"
---
ToBTreeSet {
    styles: {},
    code: "const S = styled[\"div\"]`color: red;`;\n",
}
